# This file is part of the dune-gdt project:
#   http://users.dune-project.org/projects/dune-gdt
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

includedir = $(includedir)/dune/detailed/discretizations/basefunctionset
include_HEADERS = fem.hh fem-localfunctions.hh interface.hh

include $(top_srcdir)/am/global-rules
