# This file is part of the dune-gdt project:
#   http://users.dune-project.org/projects/dune-gdt
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = containerfactory

la_includedir = $(includedir)/dune/gdt/la
la_include_HEADERS = containerfactory.hh

include $(top_srcdir)/am/global-rules
