# This file is part of the dune-gdt project:
#   http://users.dune-project.org/projects/dune-gdt
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

includedir = $(includedir)/dune/gdt/evaluation/local
include_HEADERS = elliptic.hh interface.hh ipdg-fluxes.hh swipdg-fluxes.hh

include $(top_srcdir)/am/global-rules
